[NEW]: articulo: Ahora se puede buscar por nombre
