# src/routes/articulos.routes.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { darDeBaja, get, getAll, getByEstado, insert, update } from '../controllers/articulo.controller';
+import { darDeBaja, get, getAll, getByEstado, insert, update , getByNombre} from '../controllers/articulo.controller';
 import catchAsyncErrors from '../middlewares/catchAsyncErrors';
 import { autenticarJWT } from '../middlewares/authMiddleware';
 
@@ -9,6 +9,7 @@ const router = Router();
 router.get('/',autenticarJWT ,catchAsyncErrors(getAll));
 router.get('/:id', autenticarJWT, catchAsyncErrors(get));
 router.get('/estado/:estado', autenticarJWT, catchAsyncErrors(getByEstado)); 
+router.get('/nombre/:nombre', autenticarJWT, catchAsyncErrors(getByNombre));
 router.post('/new', autenticarJWT, catchAsyncErrors(insert)); 
 router.put('/:id', autenticarJWT, catchAsyncErrors(update));
 router.delete('/:id', autenticarJWT, catchAsyncErrors(darDeBaja)); 
